tests/wpt/tests/third_party/test262/test/language/expressions/assignmenttargettype/parenthesized-primaryexpression-functionexpression.js
// This file was procedurally generated from the following sources:
// - src/assignment-target-type/primaryexpression-functionexpression.case
// - src/assignment-target-type/invalid/parenthesized.template
/*---
description: PrimaryExpression FunctionExpression, Return invalid. (ParenthesizedExpression)
esid: sec-grouping-operator-static-semantics-assignmenttargettype
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    ParenthesizedExpression: (Expression)

    Return AssignmentTargetType of Expression.
---*/

$DONOTEVALUATE();

(function() {}) = 1;
